@@ -1,4 +1,12 @@
 gcviewer
 ========
 
-Using GUI to view gc log
+Using GUI to view gc log.
+
+Now only apply to CMS gc.
+
+-XX:+UseConcMarkSweepGC 
+-XX:+UseParNewGC 
+-verbose:gc 
+-XX:+PrintGCDetails 
+-XX:+PrintGCDateStamps 
